--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -17,15 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Run Setup
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/GeorgesAlkhouri/setup-os/HEAD/setup.sh)"
         
   Mac:
       runs-on: macos-latest
       steps:
-        - uses: actions/checkout@v2
-        - name: Run a one-line script
-          run: echo Hello, world! 
+      - name: Run Setup
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/GeorgesAlkhouri/setup-os/HEAD/setup.sh)"
